--- a/index.html
+++ b/index.html
@@ -14,5 +14,30 @@
     <img class="header__logo" src="./images/logo.svg" alt="логотип" />
     <div class="header__line"></div>
   </header>
+  <main class="main-content">
+    <section class="profile">
+      <div class="profile__container">
+        <img class="profile__avatar" src="./images/Avatar.jpeg" alt="Аватар">
+        <div class="profile__info">
+          <div class=profile__edit-bio>
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <button class="profile__edit-button">
+              <span class="sr-only">Редактировать профиль</span>
+            </button>
+          </div>
+          <p class="profile__caption">Исследователь океана</p>
+        </div>
+      </div>
+      <button class="profile__add-button">
+        <span class="sr-only">Добавить фотографии</span>
+      </button>
+    </section>
+    <section class="elements">
+
+    </section>
+  </main>
+  <footer class="footer">
+    <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+  </footer>
 </body>
 </html>
