feat:elements, adapt

--- a/index.html
+++ b/index.html
@@ -33,6 +33,74 @@
       </button>
     </section>
     <section class="elements">
+      <ul class="elements__list">
+        <li>
+          <article class="element">
+            <img class="element__image" src="./images/kamchatka.jpg" alt="Камчатка">
+            <div class="element__description">
+              <h2 class="element__title">Камчатка ggjhgfsdsdsds</h2>
+              <button class="element__button">
+                <span class="sr-only">Поставить лайк</span>
+              </button>
+            </div>
+          </article>
+        </li>
+        <li>
+          <article class="element">
+            <img class="element__image" src="./images/krim.jpg" alt="Крым">
+            <div class="element__description">
+              <h2 class="element__title">Крым</h2>
+              <button class="element__button">
+                <span class="sr-only">Поставить лайк</span>
+              </button>
+            </div>
+          </article>
+        </li>
+        <li>
+          <article class="element">
+            <img class="element__image" src="./images/teriberka.jpg" alt="Териберка">
+            <div class="element__description">
+              <h2 class="element__title">Териберка</h2>
+              <button class="element__button">
+                <span class="sr-only">Поставить лайк</span>
+              </button>
+            </div>
+          </article>
+        </li>
+        <li>
+          <article class="element">
+            <img class="element__image" src="./images/baikal.jpg" alt="Байкал">
+            <div class="element__description">
+              <h2 class="element__title">Байкал</h2>
+              <button class="element__button">
+                <span class="sr-only">Поставить лайк</span>
+              </button>
+            </div>
+          </article>
+        </li>
+        <li>
+          <article class="element">
+            <img class="element__image" src="./images/altai.jpg" alt="Алтай">
+            <div class="element__description">
+              <h2 class="element__title">Алтай</h2>
+              <button class="element__button">
+                <span class="sr-only">Поставить лайк</span>
+              </button>
+            </div>
+          </article>
+        </li>
+        <li>
+          <article class="element">
+            <img class="element__image" src="./images/sochi.jpg" alt="Сочи">
+            <div class="element__description">
+              <h2 class="element__title">Сочи</h2>
+              <button class="element__button">
+                <span class="sr-only">Поставить лайк</span>
+              </button>
+            </div>
+          </article>
+        </li>
+      </ul>
 
     </section>
   </main>
