--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Интерактивная страница с фото">
-  <meta name="author" content="Варвара Намар" />
-  <link rel="stylesheet" href="./pages/index.css" />
+  <meta name="author" content="Варвара Намар">
+  <link rel="stylesheet" href="./pages/index.css">
+  <script src="./scripts/index.js" defer></script>
   <title>Место</title>
 </head>
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="./images/logo.svg" alt="логотип" />
+    <img class="header__logo" src="./images/logo.svg" alt="логотип">
     <div class="header__line"></div>
   </header>
   <main class="main-content">
@@ -110,8 +111,8 @@
   <div class="popup">
     <form class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input class="popup__name" type="text" name="name" placeholder="Имя"/>
-      <input class="popup__caption"type="text" name="occupation" placeholder="О себе"/>
+      <input class="popup__input popup__input-name" type="text" name="name" placeholder="Имя">
+      <input class="popup__input popup__input-occupation" type="text" name="occupation" placeholder="О себе">
       <button class="popup__save-button">Сохранить</button>
       <button class="popup__close-button">
         <span class="sr-only">Закрыть</span>
