--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Интерактивная страница с фото">
   <meta name="author" content="Варвара Намар">
   <link rel="stylesheet" href="./pages/index.css">
-  <script src="./scripts/index.js" defer></script>
   <title>Место</title>
 </head>
 <body class="page">
@@ -22,16 +21,12 @@
         <div class="profile__info">
           <div class=profile__edit-bio>
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button">
-              <span class="sr-only">Редактировать профиль</span>
-            </button>
+            <button class="profile__edit-button" aria-label="Редактировать профиль"></button>
           </div>
           <p class="profile__caption">Исследователь океана</p>
         </div>
       </div>
-      <button class="profile__add-button">
-        <span class="sr-only">Добавить фотографии</span>
-      </button>
+      <button class="profile__add-button" aria-label="Добавить фотографии"></button>
     </section>
     <section class="elements">
       <ul class="elements__list">
@@ -40,9 +35,7 @@
             <img class="element__image" src="./images/kamchatka.jpg" alt="Камчатка">
             <div class="element__description">
               <h2 class="element__title">Камчатка</h2>
-              <button class="element__like-button">
-                <span class="sr-only">Поставить лайк</span>
-              </button>
+              <button class="element__like-button" aria-label="Поставить лайк"></button>
             </div>
           </article>
         </li>
@@ -51,9 +44,7 @@
             <img class="element__image" src="./images/krim.jpg" alt="Крым">
             <div class="element__description">
               <h2 class="element__title">Крым</h2>
-              <button class="element__like-button">
-                <span class="sr-only">Поставить лайк</span>
-              </button>
+              <button class="element__like-button" aria-label="Поставить лайк"></button>
             </div>
           </article>
         </li>
@@ -62,9 +53,7 @@
             <img class="element__image" src="./images/teriberka.jpg" alt="Териберка">
             <div class="element__description">
               <h2 class="element__title">Териберка</h2>
-              <button class="element__like-button">
-                <span class="sr-only">Поставить лайк</span>
-              </button>
+              <button class="element__like-button" aria-label="Поставить лайк"></button>
             </div>
           </article>
         </li>
@@ -73,9 +62,7 @@
             <img class="element__image" src="./images/baikal.jpg" alt="Байкал">
             <div class="element__description">
               <h2 class="element__title">Байкал</h2>
-              <button class="element__like-button">
-                <span class="sr-only">Поставить лайк</span>
-              </button>
+              <button class="element__like-button" aria-label="Поставить лайк"></button>
             </div>
           </article>
         </li>
@@ -84,9 +71,7 @@
             <img class="element__image" src="./images/altai.jpg" alt="Алтай">
             <div class="element__description">
               <h2 class="element__title">Алтай</h2>
-              <button class="element__like-button">
-                <span class="sr-only">Поставить лайк</span>
-              </button>
+              <button class="element__like-button" aria-label="Поставить лайк"></button>
             </div>
           </article>
         </li>
@@ -95,9 +80,7 @@
             <img class="element__image" src="./images/sochi.jpg" alt="Сочи">
             <div class="element__description">
               <h2 class="element__title">Сочи</h2>
-              <button class="element__like-button">
-                <span class="sr-only">Поставить лайк</span>
-              </button>
+              <button class="element__like-button" aria-label="Поставить лайк"></button>
             </div>
           </article>
         </li>
@@ -114,11 +97,9 @@
       <input class="popup__input popup__input-name" type="text" name="name" placeholder="Имя">
       <input class="popup__input popup__input-occupation" type="text" name="occupation" placeholder="О себе">
       <button class="popup__save-button">Сохранить</button>
-      <button class="popup__close-button">
-        <span class="sr-only">Закрыть</span>
-      </button>
+      <button class="popup__close-button" aria-label="Закрыть"></button>
     </form>
   </div>
-
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
