--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="./images/logo.svg" alt="логотип">
-    <div class="header__line"></div>
+    <img class="header__logo" src="./images/logo.svg" alt="логотип"> 
   </header>
   <main class="main-content">
     <section class="profile">
@@ -21,12 +20,12 @@
         <div class="profile__info">
           <div class=profile__edit-bio>
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" aria-label="Редактировать профиль"></button>
+            <button class="profile__edit-button" aria-label="Редактировать профиль" type="button"></button>
           </div>
           <p class="profile__caption">Исследователь океана</p>
         </div>
       </div>
-      <button class="profile__add-button" aria-label="Добавить фотографии"></button>
+      <button class="profile__add-button" aria-label="Добавить фотографии" type="button"></button>
     </section>
     <section class="elements">
       <ul class="elements__list">
@@ -35,7 +34,7 @@
             <img class="element__image" src="./images/kamchatka.jpg" alt="Камчатка">
             <div class="element__description">
               <h2 class="element__title">Камчатка</h2>
-              <button class="element__like-button" aria-label="Поставить лайк"></button>
+              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
             </div>
           </article>
         </li>
@@ -44,7 +43,7 @@
             <img class="element__image" src="./images/krim.jpg" alt="Крым">
             <div class="element__description">
               <h2 class="element__title">Крым</h2>
-              <button class="element__like-button" aria-label="Поставить лайк"></button>
+              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
             </div>
           </article>
         </li>
@@ -53,7 +52,7 @@
             <img class="element__image" src="./images/teriberka.jpg" alt="Териберка">
             <div class="element__description">
               <h2 class="element__title">Териберка</h2>
-              <button class="element__like-button" aria-label="Поставить лайк"></button>
+              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
             </div>
           </article>
         </li>
@@ -62,7 +61,7 @@
             <img class="element__image" src="./images/baikal.jpg" alt="Байкал">
             <div class="element__description">
               <h2 class="element__title">Байкал</h2>
-              <button class="element__like-button" aria-label="Поставить лайк"></button>
+              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
             </div>
           </article>
         </li>
@@ -71,7 +70,7 @@
             <img class="element__image" src="./images/altai.jpg" alt="Алтай">
             <div class="element__description">
               <h2 class="element__title">Алтай</h2>
-              <button class="element__like-button" aria-label="Поставить лайк"></button>
+              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
             </div>
           </article>
         </li>
@@ -80,7 +79,7 @@
             <img class="element__image" src="./images/sochi.jpg" alt="Сочи">
             <div class="element__description">
               <h2 class="element__title">Сочи</h2>
-              <button class="element__like-button" aria-label="Поставить лайк"></button>
+              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
             </div>
           </article>
         </li>
@@ -92,13 +91,15 @@
   </footer>
 
   <div class="popup">
-    <form class="popup__container">
+    <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input class="popup__input popup__input-name" type="text" name="name" placeholder="Имя">
-      <input class="popup__input popup__input-occupation" type="text" name="occupation" placeholder="О себе">
-      <button class="popup__save-button">Сохранить</button>
-      <button class="popup__close-button" aria-label="Закрыть"></button>
-    </form>
+      <button class="popup__close-button" aria-label="Закрыть" type="button"></button>
+      <form class="popup__form" name="profile-form" novalidate>
+        <input class="popup__input popup__input_type_name" type="text" name="name" required placeholder="Имя">
+        <input class="popup__input popup__input_type_occupation" type="text" name="occupation" required placeholder="О себе">
+        <button class="popup__save-button" type="submit">Сохранить</button>
+      </form>
+    </div>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
