--- a/index.html
+++ b/index.html
@@ -29,68 +29,6 @@
       <button class="profile__add-button" aria-label="Добавить фотографии" type="button"></button>
     </section>
     <section class="elements">
-      <ul class="elements__list">
-        <li>
-          <article class="element">
-            <img class="element__image" src="./images/kamchatka.jpg" alt="Камчатка">
-            <div class="element__description">
-              <h2 class="element__title">Камчатка</h2>
-              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
-            </div>
-            <button class="element__delete-button" aria-label="Удалить карточку" type="button"></button>
-          </article>
-        </li>
-        <li>
-          <article class="element">
-            <img class="element__image" src="./images/krim.jpg" alt="Крым">
-            <div class="element__description">
-              <h2 class="element__title">Крым</h2>
-              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
-            </div>
-            <button class="element__delete-button" aria-label="Удалить карточку" type="button"></button>
-          </article>
-        </li>
-        <li>
-          <article class="element">
-            <img class="element__image" src="./images/teriberka.jpg" alt="Териберка">
-            <div class="element__description">
-              <h2 class="element__title">Териберка</h2>
-              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
-            </div>
-            <button class="element__delete-button" aria-label="Удалить карточку" type="button"></button>
-          </article>
-        </li>
-        <li>
-          <article class="element">
-            <img class="element__image" src="./images/baikal.jpg" alt="Байкал">
-            <div class="element__description">
-              <h2 class="element__title">Байкал</h2>
-              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
-            </div>
-            <button class="element__delete-button" aria-label="Удалить карточку" type="button"></button>
-          </article>
-        </li>
-        <li>
-          <article class="element">
-            <img class="element__image" src="./images/altai.jpg" alt="Алтай">
-            <div class="element__description">
-              <h2 class="element__title">Алтай</h2>
-              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
-            </div>
-            <button class="element__delete-button" aria-label="Удалить карточку" type="button"></button>
-          </article>
-        </li>
-        <li>
-          <article class="element">
-            <img class="element__image" src="./images/sochi.jpg" alt="Сочи">
-            <div class="element__description">
-              <h2 class="element__title">Сочи</h2>
-              <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
-            </div>
-            <button class="element__delete-button" aria-label="Удалить карточку" type="button"></button>
-          </article>
-        </li>
-      </ul>
     </section>
   </main>
   <footer class="footer">
@@ -113,13 +51,33 @@
     <div class="popup__container">
       <h2 class="popup__title">Новое место</h2>
       <button class="popup__close-button popup__close-button_add-card" aria-label="Закрыть" type="button"></button>
-      <form class="popup__form" name="card-form" novalidate>
+      <form class="popup__form popup__form_add-card" name="card-form" novalidate>
         <input class="popup__input popup__input_card_title" type="text" name="title" required placeholder="Название">
         <input class="popup__input popup__input_card_link" type="text" name="link" required placeholder="Ссылка на картинку">
         <button class="popup__save-button" type="submit">Создать</button>
       </form>
     </div>
   </div>
+
+  <div class="popup popup_zoom-card">
+    <div class="popup__overlay"></div>
+    <div class="popup__zoom-container">
+      <img class="popup__zoom-image" src="#" alt="изображение карточки">
+      <p class="popup__zoom-title"></p>
+      <button class="popup__close-button popup__close-button_zoom-card" aria-label="Закрыть" type="button"></button>
+    </div>
+  </div>
   
+  <template id="card-template">    
+      <article class="element">
+        <img class="element__image" src="#" alt="изображение карточки">
+        <button class="element__delete-button" aria-label="Удалить карточку" type="button"></button>
+        <div class="element__description">
+          <h2 class="element__title"></h2>
+          <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
+        </div>      
+      </article>
+  </template>
+
 </body>
 </html>
