fixed: after first check js, cards

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="author" content="Варвара Намар">
   <link rel="stylesheet" href="./pages/index.css">
   <script src="./scripts/index.js" defer></script>
+  <script src="./scripts/constants.js"></script>
   <title>Место</title>
 </head>
 <body class="page">
