--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <script src="./scripts/index.js" defer></script>
   <script src="./scripts/constants.js"></script>
+  <script src="./scripts/validate.js" defer></script>
   <title>Место</title>
 </head>
 <body class="page">
@@ -36,36 +37,39 @@
     <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
   </footer>
 
-  <div class="popup">
+  <div class="popup popup_type_profile">
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <button class="popup__close-button" aria-label="Закрыть" type="button"></button>
-      <form class="popup__form" name="profile-form" novalidate>
-        <input class="popup__input popup__input_type_name" type="text" name="name" required placeholder="Имя">
-        <input class="popup__input popup__input_type_occupation" type="text" name="occupation" required placeholder="О себе">
+      <form class="popup__form popup__form_type_profile" name="profile-form" novalidate>
+        <input class="popup__input popup__input_type_name" id="name-input" type="text" name="name" required placeholder="Имя" minlength="2" maxlength="40">
+        <span class="popup__error name-input-error">Вы пропустили это поле</span>
+        <input class="popup__input popup__input_type_job" id="job-input" type="text" name="occupation" required placeholder="О себе" minlength="2" maxlength="200">
+        <span class="popup__error job-input-error">Вы пропустили это поле</span>
         <button class="popup__save-button" type="submit">Сохранить</button>
       </form>
     </div>
   </div>
 
-  <div class="popup popup_add-card">
+  <div class="popup popup_type_card">
     <div class="popup__container">
       <h2 class="popup__title">Новое место</h2>
-      <button class="popup__close-button popup__close-button_add-card" aria-label="Закрыть" type="button"></button>
-      <form class="popup__form popup__form_add-card" name="card-form" novalidate>
-        <input class="popup__input popup__input_card_title" type="text" name="title" required placeholder="Название">
-        <input class="popup__input popup__input_card_link" type="text" name="link" required placeholder="Ссылка на картинку">
+      <button class="popup__close-button" aria-label="Закрыть" type="button"></button>
+      <form class="popup__form popup__form_type_card" name="card-form" novalidate>
+        <input class="popup__input popup__input_type_card-title" id="card-title-input" type="text" name="title" required placeholder="Название" minlength="2" maxlength="30">
+        <span class="popup__error card-title-input-error">Вы пропустили это поле</span>
+        <input class="popup__input popup__input_type_card-link" id="card-link-input" type="url" name="link" required placeholder="Ссылка на картинку">
+        <span class="popup__error card-link-input-error">Вы пропустили это поле</span>
         <button class="popup__save-button" type="submit">Создать</button>
       </form>
     </div>
   </div>
 
-  <div class="popup popup_zoom-card">
-    <div class="popup__overlay"></div>
+  <div class="popup popup_type_zoom-image">
     <div class="popup__zoom-container">
       <img class="popup__zoom-image" src="#" alt="изображение карточки">
       <p class="popup__zoom-title"></p>
-      <button class="popup__close-button popup__close-button_zoom-card" aria-label="Закрыть" type="button"></button>
+      <button class="popup__close-button" aria-label="Закрыть" type="button"></button>
     </div>
   </div>
   
