--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <meta name="description" content="Интерактивная страница с фото">
   <meta name="author" content="Варвара Намар">
   <link rel="stylesheet" href="./pages/index.css">
-  <script src="./scripts/index.js" defer></script>
-  <script src="./scripts/constants.js"></script>
-  <script src="./scripts/validate.js" defer></script>
   <title>Место</title>
 </head>
 <body class="page">
@@ -83,6 +80,6 @@
         </div>      
       </article>
   </template>
-
+<script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
