--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Интерактивная страница с фото">
   <meta name="author" content="Варвара Намар">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="./images/logo.svg" alt="логотип"> 
+    <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="логотип"> 
   </header>
   <main class="main-content">
     <section class="profile">
       <div class="profile__container">
-        <img class="profile__avatar" src="./images/Avatar.jpeg" alt="Аватар">
+        <img class="profile__avatar" src="<%=require('./images/Avatar.jpeg')%>" alt="Аватар">
         <div class="profile__info">
           <div class=profile__edit-bio>
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -41,7 +40,7 @@
       <form class="popup__form popup__form_type_profile" name="profile-form" novalidate>
         <input class="popup__input popup__input_type_name" id="name-input" type="text" name="name" required placeholder="Имя" minlength="2" maxlength="40">
         <span class="popup__error name-input-error">Вы пропустили это поле</span>
-        <input class="popup__input popup__input_type_job" id="job-input" type="text" name="occupation" required placeholder="О себе" minlength="2" maxlength="200">
+        <input class="popup__input popup__input_type_job" id="job-input" type="text" name="job" required placeholder="О себе" minlength="2" maxlength="200">
         <span class="popup__error job-input-error">Вы пропустили это поле</span>
         <button class="popup__save-button" type="submit">Сохранить</button>
       </form>
@@ -53,7 +52,7 @@
       <h2 class="popup__title">Новое место</h2>
       <button class="popup__close-button" aria-label="Закрыть" type="button"></button>
       <form class="popup__form popup__form_type_card" name="card-form" novalidate>
-        <input class="popup__input popup__input_type_card-title" id="card-title-input" type="text" name="title" required placeholder="Название" minlength="2" maxlength="30">
+        <input class="popup__input popup__input_type_card-title" id="card-title-input" type="text" name="name" required placeholder="Название" minlength="2" maxlength="30">
         <span class="popup__error card-title-input-error">Вы пропустили это поле</span>
         <input class="popup__input popup__input_type_card-link" id="card-link-input" type="url" name="link" required placeholder="Ссылка на картинку">
         <span class="popup__error card-link-input-error">Вы пропустили это поле</span>
@@ -80,6 +79,6 @@
         </div>      
       </article>
   </template>
-<script type="module" src="./scripts/index.js"></script>
+
 </body>
 </html>
