--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
   <main class="main-content">
     <section class="profile">
       <div class="profile__container">
-        <img class="profile__avatar" src="<%=require('./images/Avatar.jpeg')%>" alt="Аватар">
+        <div class="profile__avatar-container">
+          <img class="profile__avatar" src="<%=require('./images/Avatar.jpeg')%>" alt="Аватар">
+          <button class="profile__avatar-edit-button" aria-label="Редактировать аватар" type="button"></button>
+        </div>
         <div class="profile__info">
           <div class=profile__edit-bio>
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -40,8 +43,20 @@
       <form class="popup__form popup__form_type_profile" name="profile-form" novalidate>
         <input class="popup__input popup__input_type_name" id="name-input" type="text" name="name" required placeholder="Имя" minlength="2" maxlength="40">
         <span class="popup__error name-input-error">Вы пропустили это поле</span>
-        <input class="popup__input popup__input_type_job" id="job-input" type="text" name="job" required placeholder="О себе" minlength="2" maxlength="200">
+        <input class="popup__input popup__input_type_job" id="job-input" type="text" name="about" required placeholder="О себе" minlength="2" maxlength="200">
         <span class="popup__error job-input-error">Вы пропустили это поле</span>
+        <button class="popup__save-button" type="submit">Сохранить</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="popup popup_type_avatar">
+    <div class="popup__container">
+      <h2 class="popup__title">Обновить аватар</h2>
+      <button class="popup__close-button" aria-label="Закрыть" type="button"></button>
+      <form class="popup__form popup__form_type_avatar" name="avatar-form" novalidate>
+        <input class="popup__input popup__input_type_avatar-link" id="avatar-link-input" type="url" name="link" required placeholder="Ссылка на картинку">
+        <span class="popup__error avatar-link-input-error">Вы пропустили это поле</span>
         <button class="popup__save-button" type="submit">Сохранить</button>
       </form>
     </div>
@@ -61,6 +76,16 @@
     </div>
   </div>
 
+  <div class="popup popup_type_confirm">
+    <div class="popup__container">
+      <h2 class="popup__title">Вы уверены?</h2>
+      <button class="popup__close-button" aria-label="Закрыть" type="button"></button>
+      <form class="popup__form" name="popupForm" novalidate>
+        <button class="popup__save-button" type="submit">Да</button>
+      </form> 
+    </div>
+  </div>
+
   <div class="popup popup_type_zoom-image">
     <div class="popup__zoom-container">
       <img class="popup__zoom-image" src="#" alt="изображение карточки">
@@ -75,7 +100,10 @@
         <button class="element__delete-button" aria-label="Удалить карточку" type="button"></button>
         <div class="element__description">
           <h2 class="element__title"></h2>
-          <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
+          <div class="element__like-container">
+            <button class="element__like-button" aria-label="Поставить лайк" type="button"></button>
+            <span class="element__like-count">0</span>
+          </div>
         </div>      
       </article>
   </template>
